added and translated missing texts 221 line

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -9,9 +9,7 @@
 "Checkout","Плащане"
 "Columns","Колони"
 "Language","Език"
-"Compare Products","Сравнете продукти"
-"Compare products","Сравнете продукти"
-"Confirm your order","Потвърдете поръчката си"
+"Compare Products","Сравнете продуктите"
 "Error refreshing user token. User is not authorized to access the resource","Грешка при обновяване на потребителския токен. Потребителят няма право на достъп до ресурса"
 "Error with response - bad content-type!","Грешка с отговор - лош тип съдържание!"
 "Error: Error while adding products","Грешка: Грешка при добавяне на продукти"
@@ -22,8 +20,7 @@
 "In stock!","В наличност!"
 "Internal Application error while refreshing the tokens. Please clear the storage and refresh page.","Вътрешна грешка в приложението при обновяване на токените. Моля, изчистете хранилището и презаредете страницата."
 "Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Вътрешна грешка при валидиране. Моля, проверете дали всички задължителни полета са попълнени. Моля, свържете се с нас на {email}"
-"Must be greater than 0","Трябва да е по-голямо от 0"
-"My Account","Моят профил"
+"Must be greater than 0","Трябва да е по-голямо от 0""
 "Newsletter preferences have successfully been updated","Предпочитанията за бюлетин бяха обновени успешно"
 "No available product variants","Няма налични варианти на продукта"
 "No products synced for this category. Please come back while online!","В тази категория не сe синхронизираха продукти. Моля, върнете се когато сте онлайн!"
@@ -36,7 +33,6 @@
 "Payment Information","Информация за плащане"
 "Please configure product bundle options and fix the validation errors","Моля, конфигурирайте опциите за пакет продукти и поправете грешките при валидиране"
 "Please configure custom product options and fix the validation errors","Моля, конфигурирайте персонализираните опции на продукта и коригирайте грешките при валидиране"
-"Please confirm the order you placed when you were offline","Моля, потвърдете поръчката, която сте направили, когато сте били офлайн"
 "Please fix the validation errors","Моля, поправете грешките при валидиране"
 "Please select the field which You like to sort by","Моля, изберете полето, по което искате да сортирате"
 "Please wait ...","Моля, Изчакайте ..."
@@ -117,7 +113,7 @@
 "Apply","Приложи"
 "Ok","Добре"
 "invalidCredentials","невалидни идентификационни данни"
-"Homepage","начална страница"
+"Homepage","Начална страница"
 "Order Feedback","Обратна връзка за поръчка"
 "Download Invoice","Изтегляне на фактура"
 "Retry Payment","Повторен опит за плащане"
@@ -416,37 +412,15 @@
 "Suggested Products","Предложени продукти"
 "Shipping Fee","Такса Доставка"
 "VAT (Included)","с ДДС"
-"Open Menu","Отвори менюто"
-"Open search panel","Отвори търсачката"
-"Open Wishlist","Отвори списъка с желания"
-"Open micro cart","Отвори микро количката"
-"Open my account","Отвори моя акаунт"
-"Logout","Изход"
 "Home","Начало"
-"Delivery","Доставка"
 "About us","За нас"
 "About us (Magento CMS)","За нас (Magento CMS)"
-"Customer service (Magento CMS)","Обслужване на клиенти (Magento CMS)"
-"Store locator","Локатор на магазина"
-"Go to Facebook","Отиди във Facebook"
-"Go to Instagram","Отиди в Instagram"
-"Go to Pinterest","Отиди в Pinterest"
-"Go to Youtube","Отиди в Youtube"
-"Legal notice","Правна информация"
-"Privacy policy","Политика за поверителност"
 "Subscribe to the newsletter and receive a coupon for 10% off","Абонирайте се за бюлетина и получете купон с 10% отстъпка"
 "Subscribe","Абонирай се"
 "You are offline. Some features might not be available.","Не сте на линия. Някои функции може да не са налични."
 "Language","Език"
 "English","Английски"
-"Search","Търсене"
-"Log in","Влизане"
-"E-mail address *","Имейл адрес *"
-"Please provide a valid e-mail address.","Моля, посочете валиден имейл адрес."
 "Password *","Парола *"
-"Remember me","Запомни ме"
-"Forgot the password?","Забравена парола?"
-"Log in to your account","Влезте в профила си"
 "or","или"
 "register an account","регистрирайте акаунт"
 "Toggle password visibility","Превключване на видимостта на паролата"
@@ -456,8 +430,5 @@
 "Don"t hesitate and","Не се колебайте и"
 "browse our catalog","разгледайте нашия каталог"
 "to find something beautiful for You!","за да намерите нещо красиво за себе си!"
-"My profile","Моят профил"
 "My shipping details","Моите данни за доставка"
-"My orders","Моите поръчки"
-"My Recently viewed products","Моите наскоро разглеждани продукти"
 "Your Wishlist is empty.","Списъкът Ви с желания е празен."
