--- a/core/i18n/resource/i18n/ja-JP.csv
+++ b/core/i18n/resource/i18n/ja-JP.csv
@@ -30,7 +30,7 @@
 "Date and time","日時と時間"
 "Discount code","ディスカウントコード"
 "Discount","ディスカウント"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","質問や私達のサービスをさらに良くする改善提案のある方は<b>demo@vuestorefront.io</b>までメールで連絡をお願いします。"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","質問や私達のサービスをさらに良くする改善提案のある方は<b>demo@vuestorefront.io</b>までメールで連絡をお願いします。"
 "Edit newsletter preferences","ニュースレターの設定を編集"
 "Edit payment","支払いの編集"
 "Edit personal details","ユーザー情報の編集"
@@ -39,7 +39,7 @@
 "Edit your shipping details","配送情報の編集"
 "Edit","編集"
 "Email address *","メールアドレス *"
-"Enter your email to receive instructions on how to reset your password.","メールを読んでそこにあるパスワード再設定の指示に従ってください。"
+"Enter your email to get a manual on how to reset your password.","メールを読んでそこにあるパスワード再設定の指示に従ってください。"
 "Erin recommends","Erinのおすすめ"
 "Error while sending reset password e-mail","パスワード再設定のメールの送信でエラー"
 "Everything new","全ての新製品"
@@ -58,7 +58,7 @@
 "I agree to","以下に合意します"
 "I want to create an account","アカウント作成したい"
 "I want an invoice for my company","この会社への請求書を作りたい"
-"I want to receive a newsletter, and agree to its terms","利用規約に合意してニュースレーターを受け取ります"
+"I want to receive a newsletter and agree to its terms","利用規約に合意してニュースレーターを受け取ります"
 "Internal Server Error 500","500サーバーエラー"
 "Load more","もっと見る"
 "Log in to your account","アカウントにログイン"
@@ -79,7 +79,7 @@
 "Open wishlist","欲しいものリストを開く"
 "Order ID","注文ID"
 "Order Summary","注文詳細"
-"Order informations","注文情報"
+"Order information","注文情報"
 "Out of stock!","在庫はありません！"
 "Password must have at least 8 letters.","パスワードは英数半角で8文字以上である必要があります。"
 "Payment","支払い"
@@ -124,9 +124,9 @@
 "Tax ID *","税金ID *"
 "Tax ID must have at least 3 letters.","税金登録番号は3桁以上である必要があります。"
 "Tax identification number *","税金登録番号 *"
-"Tax identification number must have at least 3 letters.","税金登録番号は3桁以上である必要があります。"
+"The tax identification number must have at least 3 letters.","税金登録番号は3桁以上である必要があります。"
 "Tax","税金"
-"The new account will be created with the purchase. You will receive details on e-mail.","この注文後新しいアカウントが作られます。メールで詳細が送られます。"
+"A new account will be created with the purchase. You will receive details by e-mail.","この注文後新しいアカウントが作られます。メールで詳細が送られます。"
 "The product is out of stock and cannot be added to Cart!","この商品は在庫がなく、カートに追加することができません！"
 "The server order id has been set to ","サーバー注文IDが以下に設定されました "
 "We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","現在インターネットへ接続されていません。注文をすることはできますが、在庫がない場合はインターネットに接続後お知らせを送ります。"
