--- a/src/themes/default-procc/resource/i18n/ar-SY.csv
+++ b/src/themes/default-procc/resource/i18n/ar-SY.csv
@@ -39,7 +39,7 @@
 "Discount","الخصم"
 "Don't hesitate and","لا تتردد و"
 "E-mail address *","البريد الإلكتروني *"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","راسلنا على <b>demo@vuestorefront.io</b> بأي سؤال أو إقتراح كيف يمكننا تحسين المنتجات أو تجربة التّسوّق"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","راسلنا على <b>demo@vuestorefront.io</b> بأي سؤال أو إقتراح كيف يمكننا تحسين المنتجات أو تجربة التّسوّق"
 "Edit newsletter preferences","تعديل خيارات النشرة البريدية"
 "Edit payment","تعديل الدفع"
 "Edit personal details","تعديل المعلومات الشخصية"
@@ -50,7 +50,7 @@
 "Email address *","البريد * الإلكتروني"
 "Email address","البريد الإلكتروني"
 "English","إنكليزي"
-"Enter your email to receive instructions on how to reset your password.","أدخل بريدك الإلكتروني لتصلك تعليمات إعادة ضبط كلمة المرور."
+"Enter your email to get a manual on how to reset your password.","أدخل بريدك الإلكتروني لتصلك تعليمات إعادة ضبط كلمة المرور."
 "Erin recommends","توصيات Erin"
 "Error while sending reset password e-mail","حدث خطأ أثناء إعادة ضبط كلمة المرور"
 "Everything new","جديدنا"
@@ -83,7 +83,7 @@
 "I want to create an account","أريد إنشاء حساب جديد"
 "I want to create an account'","أريد إنشاء حساب"
 "I want an invoice for my company","أريد إنشاء فاتورة للشركة"
-"I want to receive a newsletter, and agree to its terms","أنا أريد استلام النشرة البريدية وموافق على شروطها"
+"I want to receive a newsletter and agree to its terms","أنا أريد استلام النشرة البريدية وموافق على شروطها"
 "If you need an assistance you can drop us a line on","راسلنا هنا في حال أردت مساعدة"
 "Internal Server Error 500","خطأ داخلي في المخدّم 500"
 "Italian","إيطالي"
@@ -126,7 +126,7 @@
 "Order ID","رمز الطلبية"
 "Order Summary","ملخّص الطلبية"
 "Order confirmation","تأكيد الطلبية"
-"Order informations","معلومات الطلبية"
+"Order information","معلومات الطلبية"
 "Orders","الطلبيات"
 "Password *","كلمة المرور *"
 "Password must have at least 8 letters.","كلمة المرور يجب أن تكون 8 محارف على الأقل."
@@ -198,10 +198,10 @@
 "Tax ID *","الرمز الضريبي *"
 "Tax ID must have at least 3 letters.","يجب أن يكون الرمز الضريبي 3 حروف على الأقل."
 "Tax identification number *","الرقم الضريبي *"
-"Tax identification number must have at least 3 letters.","يجب أن يحتوي الرقم الضريبي على 3 حروف على الأقل."
+"The tax identification number must have at least 3 letters.","يجب أن يحتوي الرقم الضريبي على 3 حروف على الأقل."
 "Tax","الضريبة"
 "Terms and conditions","الشروط والأحكام"
-"The new account will be created with the purchase. You will receive details on e-mail.","سوف يتم إنشاء حساب جديد لمشترياتك. سوف يصلك بريد إلكتروني بالتفاصيل."
+"A new account will be created with the purchase. You will receive details by e-mail.","سوف يتم إنشاء حساب جديد لمشترياتك. سوف يصلك بريد إلكتروني بالتفاصيل."
 "This product is out of stock.","هذا المنتج غير متوفّر."
 "Toggle password visibility","تبديل رؤية كلمة المرور"
 "Track my order","تتبع طلبيّتي"
