--- a/src/themes/default-procc/resource/i18n/it-IT.csv
+++ b/src/themes/default-procc/resource/i18n/it-IT.csv
@@ -1,4 +1,4 @@
-"A customer with the same email already exists in an associated website.","Esiste già un account registrato con questo indirizzo email."
+"A customer with the same email already exists on an associated website.","Esiste già un account registrato con questo indirizzo email."
 "About us (Magento CMS)","Chi siamo (Magento CMS)"
 "About us","Chi siamo"
 "Add a discount code","Aggiungi un codice sconto"
@@ -49,7 +49,7 @@
 "Discount","Sconto"
 "Don't hesitate and","Non esitare e "
 "E-mail address *","Indirizzo email*"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","Scrivici a <b>demo@vuestorefront.io</b> per qualsiasi domanda, suggerimenti su come migliorare i nostri prodotti o sulla tua esperienza di acquisto."
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","Scrivici a <b>demo@vuestorefront.io</b> per qualsiasi domanda, suggerimenti su come migliorare i nostri prodotti o sulla tua esperienza di acquisto."
 "Edit newsletter preferences","Modifica le preferenze della newsletter"
 "Edit payment","Modifica"
 "Edit personal details","Modifica"
@@ -60,7 +60,7 @@
 "Email address *","Email*"
 "Email address","Email"
 "English","Inglese"
-"Enter your email to receive instructions on how to reset your password.","Inserisci la tua mail per ricevere istruzioni su come reimpostare la password"
+"Enter your email to get a manual on how to reset your password.","Inserisci la tua mail per ricevere istruzioni su come reimpostare la password"
 "Erin recommends","Erin consiglia"
 "Error while sending reset password e-mail","Errore durante l'invio della mail per reimpostare la password"
 "Everything new","Tutte le novità"
@@ -94,7 +94,7 @@
 "I want to create an account","Desidero creare un account"
 "I want to create an account'","Voglio creare un account'"
 "I want an invoice for my company","Genera la fattura"
-"I want to receive a newsletter, and agree to its terms","Voglio ricevere la newsletter e accetto i suoi termini"
+"I want to receive a newsletter and agree to its terms","Voglio ricevere la newsletter e accetto i suoi termini"
 "If you need an assistance you can drop us a line on","Se hai bisogno di aiuto scrivici un messaggio"
 "Instant Checkout","Checkout istantaneo"
 "Internal Server Error 500","Errore interno del server 500"
@@ -141,7 +141,7 @@
 "Order ID","Numero ordine"
 "Order Summary","Riepilogo dell'ordine"
 "Order confirmation","Conferma ordine"
-"Order informations","Informazioni sull'ordine"
+"Order information","Informazioni sull'ordine"
 "Orders","Ordini"
 "Password *","Password*"
 "Password must have at least 8 letters.","La password deve essere composta da almeno 8 lettere."
@@ -153,7 +153,7 @@
 "Phone Number","Telefono"
 "Phone number may be needed by carrier","Il numero di telefono potrebbe servire al corriere"
 "Place the order","Concludi l'ordine"
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Per favore cambia i tuoi parametri di ricerca e riprova. Se ancora non trovi nulla di rilevante, torna in home page e prova qualcuno dei nostri prodotti più venduti!"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","Per favore cambia i tuoi parametri di ricerca e riprova. Se ancora non trovi nulla di rilevante, torna in home page e prova qualcuno dei nostri prodotti più venduti!"
 "Please check if all data are correct","Controlla che tutte le informazioni siano corrette"
 "Please confirm the order you placed when you were offline","Conferma l'ordine che hai creato quando eri offline"
 "Please provide a valid e-mail address.","Inserisci un indirizzo email valido"
@@ -187,7 +187,7 @@
 "Safety","Sicurezza"
 "Sale","Sconti"
 "Search","Cerca"
-"Searched term should consist of at least 3 characters.","Il termine di ricerca deve contenere almeno 3 caratteri."
+"The searched term should consist of at least 3 characters.","Il termine di ricerca deve contenere almeno 3 caratteri."
 "See details","Dettagli"
 "See our bestsellers","Visualizza i prodotti più venduti"
 "Select No","Seleziona No"
@@ -218,11 +218,11 @@
 "Tax ID *","Partita IVA*"
 "Tax ID must have at least 3 letters.","Tax ID must have at least 3 letters."
 "Tax identification number *","Codice fiscale/Partita IVA*"
-"Tax identification number must have at least 3 letters.","Il codice fiscale deve essere composto da almeno 3 lettere"
+"The tax identification number must have at least 3 letters.","Il codice fiscale deve essere composto da almeno 3 lettere"
 "Tax","Tasse"
 "Terms and conditions","Termini e condizioni"
 "The OrderNumber is {id}","Il numero dell'ordine è {id}"
-"The new account will be created with the purchase. You will receive details on e-mail.","Il nuovo account verrà creato con l'acquisto. Riceverai le informazioni tramite email"
+"A new account will be created with the purchase. You will receive details by e-mail.","Il nuovo account verrà creato con l'acquisto. Riceverai le informazioni tramite email"
 "The order can not be transfered because of server error. Order has been queued","L'ordine non può essere evaso a causa di un errore del server. L'ordine è stato messo in coda."
 "The server order id has been set to ","L'ID dell'ordine sul server è stato impostato a "
 "This product is out of stock.","Il prodotto non è disponibile."
