--- a/src/themes/default-procc/resource/i18n/ja-JP.csv
+++ b/src/themes/default-procc/resource/i18n/ja-JP.csv
@@ -40,7 +40,7 @@
 "Edit","編集"
 "Email address *","メールアドレス *"
 "Email address","メールアドレス"
-"Enter your email to receive instructions on how to reset your password.","メールアドレスを入力して、パスワードリセットの手順を受信してください。"
+"Enter your email to get a manual on how to reset your password.","メールアドレスを入力して、パスワードリセットの手順を受信してください。"
 "Erin recommends","エリンのおすすめ"
 "Error while sending reset password e-mail","リセットパスワードを送る際にエラー"
 "Everything new","全ての新しいもの"
@@ -69,7 +69,7 @@
 "I want to create an account","アカウントを作成"
 "I want to create an account'","アカウントを作成する'"
 "I want an invoice for my company","この会社への請求書を発行する"
-"I want to receive a newsletter, and agree to its terms","規約に同意して、ニュースレターを受け取ります"
+"I want to receive a newsletter and agree to its terms","規約に同意して、ニュースレターを受け取ります"
 "If you need an assistance you can drop us a line on","お問合わせはこちらからお願いします"
 "Items ordered","注文されました"
 "Kidswear","子供服"
@@ -105,7 +105,7 @@
 "Order #{id}","注文番号{id}"
 "Order ID","注文ID"
 "Order Summary","注文の詳細"
-"Order informations","注文の情報"
+"Order information","注文の情報"
 "Orders","注文"
 "Password *","パスワード *"
 "Passwords must be identical","パスワードは同じである必要があります"
@@ -171,10 +171,10 @@
 "Tax ID *","税金ID *"
 "Tax ID must have at least 3 letters.","税金IDは3文字以上である必要があります"
 "Tax identification number *","税金ID番号 *"
-"Tax identification number must have at least 3 letters.","税金IDは最低3文字必要です"
+"The tax identification number must have at least 3 letters.","税金IDは最低3文字必要です"
 "Tax","税金"
 "Terms and conditions","利用規約"
-"The new account will be created with the purchase. You will receive details on e-mail.","この買い物の後にアカウントが作成されます。詳細の入ったメールが送られます"
+"A new account will be created with the purchase. You will receive details by e-mail.","この買い物の後にアカウントが作成されます。詳細の入ったメールが送られます"
 "Toggle password visibility","パスワードの見え方の切り替え"
 "Track my order","注文のトラッキング"
 "Type","タイプ"
