--- a/src/themes/default-procc/resource/i18n/jp-JP.csv
+++ b/src/themes/default-procc/resource/i18n/jp-JP.csv
@@ -13,7 +13,7 @@
 "My account","自分のアカウント"
 "My Account","自分のアカウント"
 "Logout","ログアウト"
-"Enter your email to receive instructions on how to reset your password.","メールアドレスを入力して、パスワードリセットの手順を受信してください。"
+"Enter your email to get a manual on how to reset your password.","メールアドレスを入力して、パスワードリセットの手順を受信してください。"
 "Reset password","リセットパスワード"
 "or","か"
 "return to log in","ログインに戻る"
@@ -52,7 +52,7 @@
 "Edit personal details","個人の詳細の編集"
 "Continue to shipping","買い物を続ける"
 "We will send you details regarding the order","注文に関する詳細を送ります"
-"The new account will be created with the purchase. You will receive details on e-mail.","この買い物の後にアカウントが作成されます。詳細の入ったメールが送られます"
+"A new account will be created with the purchase. You will receive details by e-mail.","この買い物の後にアカウントが作成されます。詳細の入ったメールが送られます"
 "Qty","数量"
 "Edit shipping","発送方法の編集"
 "Ship to my default address","デフォルトの住所に発送する"
@@ -144,7 +144,7 @@
 "Zip-code must have at least 3 letters.","郵便番号は最低3文字必要です"
 "I want to create an account'","アカウントを作成する'"
 "My billing address is the same","発送先の住所をコピーする"
-"Tax identification number must have at least 3 letters.","税金IDは最低3文字必要です"
+"The tax identification number must have at least 3 letters.","税金IDは最低3文字必要です"
 "Please provide a valid e-mail address.","正しいメールアドレスを入力してください"
 "Use my company's address details","自分の会社の住所を使う"
 "Passwords must be identical","パスワードは同じである必要があります"
@@ -190,7 +190,7 @@
 "View all","全てを見る"
 "Create a new account","アカウントを作る"
 "I accept terms and conditions","利用規約に同意する"
-"I want to receive a newsletter, and agree to its terms","規約に同意して、ニュースレターを受け取ります"
+"I want to receive a newsletter and agree to its terms","規約に同意して、ニュースレターを受け取ります"
 "Use my company's address details","自分の会社の住所の詳細を使う"
 "Tax ID must have at least 3 letters.","税金IDは3文字以上である必要があります"
 "Country *","国 *"
@@ -216,7 +216,7 @@
 "Subtotal","小計"
 "Tax","税金"
 "Discount","ディスカウント"
-"Order informations","注文の情報"
+"Order information","注文の情報"
 "Shipping address","発送住所"
 "Shipping method","発送方法"
 "Billing address","請求先住所"
