--- a/src/themes/default-procc/resource/i18n/nl-NL.csv
+++ b/src/themes/default-procc/resource/i18n/nl-NL.csv
@@ -1,4 +1,4 @@
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Pas uw zoekcriteria aan en probeer het opnieuw. Als u nog steeds niks relevants kan vinden, bezoek dan de homepage en bekijk onze bestsellers!"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","Pas uw zoekcriteria aan en probeer het opnieuw. Als u nog steeds niks relevants kan vinden, bezoek dan de homepage en bekijk onze bestsellers!"
 "Select ","Selecteer "
 "You are offline. Some features might not be available.","U bent momenteel offline, niet alle onderdelen van de shop zullen volledig werken"
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","U kunt zich aanmelden bij uw account met eerder gedefinieerd e-mailadres en wachtwoord. In uw account kunt u <b>uw profielgegevens bewerken</b>, de <b>geschiedenis van transacties bekijken</b>, het <b>abonnement op de nieuwsbrief bewerken</b>."
@@ -57,7 +57,7 @@ Edit your shipping details,Wijzig mijn verzendgegevens
 Edit,Wijzig
 Email address *,E-mailadres *
 Email address,E-mailadres
-Enter your email to receive instructions on how to reset your password.,Voer uw e-mailadres in om instructies te ontvangen over het opnieuw instellen van uw wachtwoord.
+Enter your email to get a manual on how to reset your password.,Voer uw e-mailadres in om instructies te ontvangen over het opnieuw instellen van uw wachtwoord.
 Erin recommends,Erin beveelt aan
 Error while sending reset password e-mail,Fout bij het verzenden van de wachtwoord reset email
 Error: Error placing an order,Error: Er iets fout gegaan tijdens het verwerken van uw order
@@ -87,7 +87,7 @@ I have a company and want to receive an invoice for every order,Ik heb een bedri
 I want to create an account',Ik wil een account aanmaken'
 I want to create an account,Ik wil een account aanmaken
 I want an invoice for my company,Ik wil een zakelijke factuur genereren
-I want to receive a newsletter, and agree to its terms,Ik wil de nieuwsbrief ontvangen en ga akkoord met de voorwaarden
+I want to receive a newsletter and agree to its terms,Ik wil de nieuwsbrief ontvangen en ga akkoord met de voorwaarden
 If you need an assistance you can drop us a line on,"Als u hulp nodig heeft, kunt u ons een bericht sturen via"
 In stock!,Op voorraad!
 In stock,Op voorraad
@@ -131,7 +131,7 @@ Open wishlist,Open verlanglijst
 Order ID,Order nummer
 Order Summary,Besteloverzicht
 Order confirmation,Bestel bevestiging
-Order informations,Order informatie
+Order information,Order informatie
 Order now - sent tomorrow,Nu besteld - morgen verstuurd
 Orders,Bestellingen
 Out of stock,Niet op voorraad
@@ -213,10 +213,10 @@ Summary,Samenvatting
 Tax ID *,BTW Nummer *
 Tax ID must have at least 3 letters,BTW nummer moet minimaal drie letters bevatten
 Tax identification number *,BTW Nummer *
-Tax identification number must have at least 3 letters.,BTW nummer moet minimaal drie letters bevatten
+The tax identification number must have at least 3 letters.,BTW nummer moet minimaal drie letters bevatten
 Tax,BTW
 Terms and conditions,Algemene voorwaarden
-The new account will be created with the purchase. You will receive details on e-mail.,Het nieuwe account wordt aangemaakt tijdens de aankoop. U ontvangt de details per e-mail.
+A new account will be created with the purchase. You will receive details by e-mail.,Het nieuwe account wordt aangemaakt tijdens de aankoop. U ontvangt de details per e-mail.
 The product, category, or CMS page is not available in Offline mode. Redirecting to Home.,Deze pagina is niet beschikbaar in offline modus. U wordt doorgestuurd naar de homepage.
 Track my order,Volg mijn bestelling
 Unfortunately we can't find the page you are looking for.,Helaas kunnen we niet vinden waar u naar op zoek bent
