--- a/src/themes/default-procc/resource/i18n/zh-cn.csv
+++ b/src/themes/default-procc/resource/i18n/zh-cn.csv
@@ -41,7 +41,7 @@
 "Discount","折扣"
 "Don't hesitate and","不要犹豫"
 "E-mail address *","电邮 *"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","如有任何问题，建议我们如何改进产品或购物体验，请发送电子邮件至<b> demo@vuestorefront.io </b>"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","如有任何问题，建议我们如何改进产品或购物体验，请发送电子邮件至<b> demo@vuestorefront.io </b>"
 "Edit newsletter preferences","编辑新闻稿首选项"
 "Edit payment","修改付款方式"
 "Edit personal details","编辑个人资料"
@@ -51,7 +51,7 @@
 "Edit","编辑"
 "Email address","电邮"
 "English","English"
-"Enter your email to receive instructions on how to reset your password.","请输入邮箱，我们将发送邮件告诉你如何重置密码."
+"Enter your email to get a manual on how to reset your password.","请输入邮箱，我们将发送邮件告诉你如何重置密码."
 "Error while sending reset password e-mail","发送重置邮件出错"
 "Everything new","最新上架"
 "Extension developers would like to thank you for placing an order!","拓展开发人员要感谢您下订单!"
@@ -80,7 +80,7 @@
 "I have a company and want to receive an invoice for every order","我公司想要收到每张订单的发票"
 "I want to create an account'","我想创建帐户'"
 "I want an invoice for my company","我想开公司发票"
-"I want to receive a newsletter, and agree to its terms","我同意相关条款，并订阅相关新闻"
+"I want to receive a newsletter and agree to its terms","我同意相关条款，并订阅相关新闻"
 "If you need an assistance you can drop us a line on","如果您需要帮助，可以给我们打电话"
 "If you need an assistance you can drop us a line on","如果您需要帮助，可以给我们打电话"
 "Internal Server Error 500","内部服务器错误 500"
@@ -125,7 +125,7 @@
 "Order ID","订单编号"
 "Order Summary","订单摘要"
 "Order confirmation","订单确认"
-"Order informations","订单信息"
+"Order information","订单信息"
 "Orders","订单"
 "Password *","密码 *"
 "Password must have at least 8 letters.","密码至少为8个字符."
@@ -136,7 +136,7 @@
 "Phone Number","电话号码"
 "Phone number may be needed by carrier","配送需要电话号码"
 "Place the order","下订单"
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","请更改您的搜索条件，然后重试。 如果仍然没有找到任何相关内容，请访问主页并阅读一些畅销书!"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","请更改您的搜索条件，然后重试。 如果仍然没有找到任何相关内容，请访问主页并阅读一些畅销书!"
 "Please check if all data are correct","请检查所有数据是否正确"
 "Please confirm the order you placed when you were offline","请确认您离线时的订单"
 "Please provide a valid e-mail address.","请提供有效的电子邮件地址."
@@ -196,10 +196,10 @@
 "Tax ID *","税码 *"
 "Tax ID must have at least 3 letters.","税号至少为3位."
 "Tax identification number *","税号 *"
-"Tax identification number must have at least 3 letters.","税号必须至少有3个字母."
+"The tax identification number must have at least 3 letters.","税号必须至少有3个字母."
 "Tax","Tax"
 "Terms and conditions","条款和条件"
-"The new account will be created with the purchase. You will receive details on e-mail.","购买时将创建新帐户。 您将收到有关电子邮件的详细信息。"
+"A new account will be created with the purchase. You will receive details by e-mail.","购买时将创建新帐户。 您将收到有关电子邮件的详细信息。"
 "The server order id has been set to ","服务器订单ID已设置为 "
 "This product is out of stock.","该商品缺货."
 "Toggle password visibility","切换密码可见性"
