--- a/src/themes/default/resource/i18n/cs-CZ.csv
+++ b/src/themes/default/resource/i18n/cs-CZ.csv
@@ -39,7 +39,7 @@
 "Discount","Sleva"
 "Don't hesitate and","Neváhejte a"
 "E-mail address *","E-mailová adresa *"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","Zašlete nám e-mail na <b>demo@vuestorefront.io</b> s jakýmikoliv otázkami či návrhy, jak bychom mohli zlepšit produkty nebo požitek z nákupu"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","Zašlete nám e-mail na <b>demo@vuestorefront.io</b> s jakýmikoliv otázkami či návrhy, jak bychom mohli zlepšit produkty nebo požitek z nákupu"
 "Edit newsletter preferences","Upravte předvolby pro zasílání novinek"
 "Edit payment","Upravit platbu"
 "Edit personal details","Upravit osobní údaje"
@@ -50,7 +50,7 @@
 "Email address *","Emailová adresa *"
 "Email address","Emailová adresa"
 "English","Angličtina"
-"Enter your email to receive instructions on how to reset your password.","Zadejte svůj e-mail pro zaslání instrukcí pro obnovení hesla."
+"Enter your email to get a manual on how to reset your password.","Zadejte svůj e-mail pro zaslání instrukcí pro obnovení hesla."
 "Erin recommends","Erin doporučuje"
 "Error while sending reset password e-mail","Chyba při posílání e-mailu pro obnovu hesla"
 "Everything new","Všechny novinky"
@@ -83,7 +83,7 @@
 "I want to create an account","Chci vytvořit účet"
 "I want to create an account'","Chci vytvořit účet'"
 "I want to generate an invoice for the company","Chci vygenerovat fakturu pro firmu"
-"I want to receive a newsletter, and agree to its terms","Chci dostávat novinky a souhlasím s jejích podmínkami"
+"I want to receive a newsletter and agree to its terms","Chci dostávat novinky a souhlasím s jejích podmínkami"
 "If you need an assistance you can drop us a line on","Pokud potřebujete pomoc, můžete nás kontaktovat na"
 "If you need an assistance you can drop us a line on","Pokud potřebujete pomoc, můžete nás kontaktovat na"
 "Internal Server Error 500","Interní chyba serveru 500"
@@ -129,7 +129,7 @@
 "Order ID","Číslo objednávky"
 "Order Summary","Přehled objednávky"
 "Order confirmation","Potvrzení objednávky"
-"Order informations","Informace o objednávce"
+"Order information","Informace o objednávce"
 "Orders","Objednávky"
 "Password *","Heslo *"
 "Password must have at least 8 letters.","Heslo musí mít alespoň 8 znaků."
@@ -141,7 +141,7 @@
 "Phone Number","Telefonní číslo"
 "Phone number may be needed by carrier","Telefonní číslo může být vyžadováno dopravcem"
 "Place the order","Zadat objednávku"
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Prosíme změňte svá vyhledávací kritéria a zkuste znovu. Pokud stále nenacházíte, co jste hledali, zkuste nějaké z našich bestsellerů!"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","Prosíme změňte svá vyhledávací kritéria a zkuste znovu. Pokud stále nenacházíte, co jste hledali, zkuste nějaké z našich bestsellerů!"
 "Please check if all data are correct","Zkontrolujte, zda jsou všechny údaje správné"
 "Please confirm the order you placed when you were offline","Prosíme potvrďte objednávku, kterou jste zadali, když jste byli v režimu offline"
 "Please provide valid e-mail address.","Prosíme uveďte platnou e-mailovou adresu."
@@ -201,10 +201,10 @@
 "Tax ID *","DIČ *"
 "Tax ID must have at least 3 letters.","DIČ musí obsahovat alespoň tři znaky."
 "Tax identification number *","Daňové identifikační číslo *"
-"Tax identification number must have at least 3 letters.","Daňové identifikační číslo musí mít alespoň 3 znaky."
+"The tax identification number must have at least 3 letters.","Daňové identifikační číslo musí mít alespoň 3 znaky."
 "Tax","Daň"
 "Terms and conditions","Smluvní podmínky"
-"The new account will be created with the purchase. You will receive details on e-mail.","Nový účet bude vytvořen při nákupu. Informace obdržíte na mail."
+"A new account will be created with the purchase. You will receive details by e-mail.","Nový účet bude vytvořen při nákupu. Informace obdržíte na mail."
 "This product is out of stock.","Tento produkt je vyprodán."
 "Toggle password visibility","Přepínání viditelnosti hesla"
 "Track my order","Sledovat objednávku"
