--- a/src/themes/default/resource/i18n/en-US.csv
+++ b/src/themes/default/resource/i18n/en-US.csv
@@ -1,4 +1,4 @@
-"A customer with the same email already exists in an associated website.","A customer with the same email already exists in an associated website."
+"A customer with the same email already exists on an associated website.","A customer with the same email already exists on an associated website."
 "About us (Magento CMS)","About us (Magento CMS)"
 "About us","About us"
 "Add a discount code","Add a discount code"
@@ -49,7 +49,7 @@
 "Discount","Discount"
 "Don't hesitate and","Don't hesitate and"
 "E-mail address *","E-mail address *"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience"
 "Edit newsletter preferences","Edit newsletter preferences"
 "Edit payment","Edit payment"
 "Edit personal details","Edit personal details"
@@ -60,7 +60,7 @@
 "Email address *","Email address *"
 "Email address","Email address"
 "English","English"
-"Enter your email to receive instructions on how to reset your password.","Enter your email to receive instructions on how to reset your password."
+"Enter your email to get a manual on how to reset your password.","Enter your email to get a manual on how to reset your password."
 "Erin recommends","Erin recommends"
 "Error while sending reset password e-mail","Error while sending reset password e-mail"
 "Everything new","Everything new"
@@ -94,7 +94,7 @@
 "I want to create an account","I want to create an account"
 "I want to create an account'","I want to create an account'"
 "I want to generate an invoice for the company","I want to generate an invoice for the company"
-"I want to receive a newsletter, and agree to its terms","I want to receive a newsletter, and agree to its terms"
+"I want to receive a newsletter and agree to its terms","I want to receive a newsletter and agree to its terms"
 "If you need an assistance you can drop us a line on","If you need an assistance you can drop us a line on"
 "Instant Checkout","Instant Checkout"
 "Internal Server Error 500","Internal Server Error 500"
@@ -141,7 +141,7 @@
 "Order ID","Order ID"
 "Order Summary","Order Summary"
 "Order confirmation","Order confirmation"
-"Order informations","Order informations"
+"Order information","Order information"
 "Orders","Orders"
 "Password *","Password *"
 "Password must have at least 8 letters.","Password must have at least 8 letters."
@@ -153,7 +153,7 @@
 "Phone Number","Phone Number"
 "Phone number may be needed by carrier","Phone number may be needed by carrier"
 "Place the order","Place the order"
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!"
 "Please check if all data are correct","Please check if all data are correct"
 "Please confirm the order you placed when you were offline","Please confirm the order you placed when you were offline"
 "Please provide valid e-mail address.","Please provide valid e-mail address."
@@ -187,7 +187,7 @@
 "Safety","Safety"
 "Sale","Sale"
 "Search","Search"
-"Searched term should consist of at least 3 characters.","Searched term should consist of at least 3 characters."
+"The searched term should consist of at least 3 characters.","The searched term should consist of at least 3 characters."
 "See details","See details"
 "See our bestsellers","See our bestsellers"
 "Select No","Select No"
@@ -218,11 +218,11 @@
 "Tax ID *","Tax ID *"
 "Tax ID must have at least 3 letters.","Tax ID must have at least 3 letters."
 "Tax identification number *","Tax identification number *"
-"Tax identification number must have at least 3 letters.","Tax identification number must have at least 3 letters."
+"The tax identification number must have at least 3 letters.","The tax identification number must have at least 3 letters."
 "Tax","Tax"
 "Terms and conditions","Terms and conditions"
 "The OrderNumber is {id}","The Order Number is {id}"
-"The new account will be created with the purchase. You will receive details on e-mail.","The new account will be created with the purchase. You will receive details on e-mail."
+"A new account will be created with the purchase. You will receive details by e-mail.","A new account will be created with the purchase. You will receive details by e-mail."
 "The order can not be transfered because of server error. Order has been queued","The order can not be transfered because of server error. Order has been queued"
 "The server order id has been set to ","The server order id has been set to "
 "This product is out of stock.","This product is out of stock."
