--- a/src/themes/default/resource/i18n/pl-PL.csv
+++ b/src/themes/default/resource/i18n/pl-PL.csv
@@ -33,7 +33,7 @@
 "Discount","Zniżka"
 "Don't hesitate and","Nie wahaj się i"
 "E-mail address *","Adres email *"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience"
 "Edit newsletter preferences","Edytuj swoje subskrypcje"
 "Edit payment","Edytuj płatność"
 "Edit personal details","Edytuj dane osobowe"
@@ -44,7 +44,7 @@
 "Email address *","Adres email *"
 "Email address","Adres email"
 "English","Angielski"
-"Enter your email to receive instructions on how to reset your password.","Podaj swój email, aby otrzymać instrukcje dotyczące zresetowania hasła."
+"Enter your email to get a manual on how to reset your password.","Podaj swój email, aby otrzymać instrukcje dotyczące zresetowania hasła."
 "Erin recommends","Polecane"
 "Error while sending reset password e-mail","Błąd wysyłania emaila do zresetowania hasła"
 "Everything new","Nowości"
@@ -76,7 +76,7 @@
 "I want to create an account","Chcę utworzyć konto"
 "I want to create an account'","Chcę utworzyć konto'"
 "I want to generate an invoice for the company","Chcę wygenerować fakturę dla firmy"
-"I want to receive a newsletter, and agree to its terms","Chcę otrzymywać newsletter"
+"I want to receive a newsletter and agree to its terms","Chcę otrzymywać newsletter"
 "If you need an assistance you can drop us a line on","Potrzebujesz przypisania, napisz do nas."
 "Italian","Włoski"
 "Italy","Włochy"
@@ -115,7 +115,7 @@
 "Order ID","ID zamówienia"
 "Order Summary","Podsumowanie zamówienia"
 "Order confirmation","Potwierdzenie zamówienia"
-"Order informations","Informcje dotyczące zamówienia"
+"Order information","Informcje dotyczące zamówienia"
 "Orders","Zamówienia"
 "Password *","Hasło *"
 "Passwords must be identical","Hasła muszą być identyczne"
@@ -126,7 +126,7 @@
 "Phone Number","Numer telefonu"
 "Phone number may be needed by carrier","Numer telefonu może być wymagany przez kuriera"
 "Place the order","Złóż zamówienie"
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Zmień kryteria wyszukiwania i spróbuj ponownie. Jeśli nadal nie znajdziesz niczego istotnego, odwiedź stronę główną i wypróbuj niektóre z naszych bestsellerów!"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","Zmień kryteria wyszukiwania i spróbuj ponownie. Jeśli nadal nie znajdziesz niczego istotnego, odwiedź stronę główną i wypróbuj niektóre z naszych bestsellerów!"
 "Please check if all data are correct","Sprawdź czy wszystkie dane są poprawne"
 "Please confirm the order you placed when you were offline","Potwierdź zamówienie, które złożyłeś będąc w trybie offline"
 "Please provide valid e-mail address.","Podaj prawidłowy adres e-mail."
@@ -157,7 +157,7 @@
 "Safety","Bezpieczeństwo"
 "Sale","Wyprzedaż"
 "Search","Szukaj"
-"Searched term should consist of at least 3 characters.","Szukana fraza powinna składać się z co najmniej 3 znaków."
+"The searched term should consist of at least 3 characters.","Szukana fraza powinna składać się z co najmniej 3 znaków."
 "See details","Szczegóły"
 "See our bestsellers","Zobacz bestsellery"
 "Select color ","Wybierz kolor "
@@ -183,10 +183,10 @@
 "Tax ID *","NIP *"
 "Tax ID must have at least 3 letters.","Identyfikator podatkowy musi składać się z co najmniej 3 liter."
 "Tax identification number *","NIP *"
-"Tax identification number must have at least 3 letters.","Numer identyfikacji podatkowej musi zawierać co najmniej 3 litery."
+"The tax identification number must have at least 3 letters.","Numer identyfikacji podatkowej musi zawierać co najmniej 3 litery."
 "Tax","Podatek"
 "Terms and conditions","Regulamin"
-"The new account will be created with the purchase. You will receive details on e-mail.","Nowe konto zostanie utworzone wraz z zamówieniem. Szczegóły zostaną wysłane na adres email."
+"A new account will be created with the purchase. You will receive details by e-mail.","Nowe konto zostanie utworzone wraz z zamówieniem. Szczegóły zostaną wysłane na adres email."
 "Toggle password visibility","Przełącz widoczność hasła"
 "Track my order","Śledź moje zamówienie"
 "Type your opinion","Twoja opinia"
