--- a/src/themes/default/resource/i18n/pt-BR.csv
+++ b/src/themes/default/resource/i18n/pt-BR.csv
@@ -40,7 +40,7 @@
 "Edit","Editar"
 "Email address *","Endereço de E-mail *"
 "Email address","Endereço E-mail"
-"Enter your email to receive instructions on how to reset your password.","Informe um e-mail para receber as instruções de como recuperar sua senha."
+"Enter your email to get a manual on how to reset your password.","Informe um e-mail para receber as instruções de como recuperar sua senha."
 "Erin recommends","Erin recomenda"
 "Error while sending reset password e-mail","Ocorreu um erro ao enviar o e-mail de recuperação de senha"
 "Everything new","Tudo novo"
@@ -69,7 +69,7 @@
 "I want to create an account","Eu quero criar uma conta"
 "I want to create an account'","Eu quero criar uma conta'"
 "I want to generate an invoice for the company","Eu quero criar uma fatura para uma empresa"
-"I want to receive a newsletter, and agree to its terms","Eu quero receber novidades, e concordo com os termos"
+"I want to receive a newsletter and agree to its terms","Eu quero receber novidades, e concordo com os termos"
 "If you need an assistance you can drop us a line on","Caso precise de alguma ajuda você pode nos deixar uma mensagem"
 "Items ordered","Itens do pedido"
 "Kidswear","Moda Infantil"
@@ -105,7 +105,7 @@
 "Order #{id}","Pedido #{id}"
 "Order ID","ID do Pedido"
 "Order Summary","Resumo do Pedido"
-"Order informations","Informação do Pedido"
+"Order information","Informação do Pedido"
 "Orders","Pedidos"
 "Password *","Senha *"
 "Passwords must be identical","Senhas precisam ser iguais"
@@ -170,10 +170,10 @@
 "Tax ID *","CPF/CNPJ *"
 "Tax ID must have at least 3 letters.","CPF/CNPJ deve possuir ao menos 3 caracteres."
 "Tax identification number *","CPF/CNPJ *"
-"Tax identification number must have at least 3 letters.","CPF/CNPJ precisa ter ao menos 3 caracteres."
+"The tax identification number must have at least 3 letters.","CPF/CNPJ precisa ter ao menos 3 caracteres."
 "Tax","Imposto"
 "Terms and conditions","Termos e condições"
-"The new account will be created with the purchase. You will receive details on e-mail.","Sua nova conta será criada junto com o pedido. Você recebará os detalhes no e-mail."
+"A new account will be created with the purchase. You will receive details by e-mail.","Sua nova conta será criada junto com o pedido. Você recebará os detalhes no e-mail."
 "Toggle password visibility","Alternar visibilidade da senha"
 "Track my order","Rastrear meu pedido"
 "Type","Tipo"
