--- a/src/themes/default/resource/i18n/ru-RU.csv
+++ b/src/themes/default/resource/i18n/ru-RU.csv
@@ -40,7 +40,7 @@
 "Edit","Изменить"
 "Email address *","Электронный адрес *"
 "Email address","Электронный адрес"
-"Enter your email to receive instructions on how to reset your password.","Введите свой электронный адрес для получения инструкции как переустановить свой пароль."
+"Enter your email to get a manual on how to reset your password.","Введите свой электронный адрес для получения инструкции как переустановить свой пароль."
 "Erin recommends","Erin рекомендует"
 "Error while sending reset password e-mail","Произошла ошибка при отправке письма для переустановки пароля"
 "Everything new","Новинки"
@@ -69,7 +69,7 @@
 "I want to create an account","Я хочу создать учетную запись"
 "I want to create an account'","Я хочу создать учетную запись'"
 "I want to generate an invoice for the company","Я хочу сгенерировать счет для компании"
-"I want to receive a newsletter, and agree to its terms","Я хочу получать новости, и принимаю условия и положения"
+"I want to receive a newsletter and agree to its terms","Я хочу получать новости, и принимаю условия и положения"
 "If you need an assistance you can drop us a line on","Если Вам нужна помощь, Вы можете написать нам в"
 "Items ordered","Заказанные товары"
 "Kidswear","Детская одежда"
@@ -105,7 +105,7 @@
 "Order #{id}","Заказ #{id}"
 "Order ID","ID заказа"
 "Order Summary","Итог заказа"
-"Order informations","Информация о заказе"
+"Order information","Информация о заказе"
 "Orders","Заказы"
 "Password *","Пароль *"
 "Passwords must be identical","Пароли должны быть идентичными"
@@ -170,10 +170,10 @@
 "Tax ID *","ИНН *"
 "Tax ID must have at least 3 letters.","ИНН должен состоять из минимум 3 символов."
 "Tax identification number *","Идентификационный номер налогоплательщика *"
-"Tax identification number must have at least 3 letters.","Идентификационный номер налогоплательщика должен состоять из минимум 3 символов."
+"The tax identification number must have at least 3 letters.","Идентификационный номер налогоплательщика должен состоять из минимум 3 символов."
 "Tax","Налог"
 "Terms and conditions","Условия и положения"
-"The new account will be created with the purchase. You will receive details on e-mail.","Новая учетная запись будет создана вместе с заказом. Детали будут высланы Вам на электронный адрес."
+"A new account will be created with the purchase. You will receive details by e-mail.","Новая учетная запись будет создана вместе с заказом. Детали будут высланы Вам на электронный адрес."
 "Toggle password visibility","Переключить видимость пароля"
 "Track my order","Отследить заказ"
 "Type","Тип"
