--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -10,8 +10,6 @@
 "Columns","Columns"
 "Language","Language"
 "Compare Products","Compare Products"
-"Compare products","Compare products"
-"Confirm your order","Confirm your order"
 "Error refreshing user token. User is not authorized to access the resource","Error refreshing user token. User is not authorized to access the resource"
 "Error with response - bad content-type!","Error with response - bad content-type!"
 "Error: Error while adding products","Error: Error while adding products"
@@ -23,7 +21,6 @@
 "Internal Application error while refreshing the tokens. Please clear the storage and refresh page.","Internal Application error while refreshing the tokens. Please clear the storage and refresh page."
 "Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Internal validation error. Please check if all required fields are filled in. Please contact us on {email}"
 "Must be greater than 0","Must be greater than 0"
-"My Account","My Account"
 "Newsletter preferences have successfully been updated","Newsletter preferences have successfully been updated"
 "No available product variants","No available product variants"
 "No products synced for this category. Please come back while online!","No products synced for this category. Please come back while online!"
@@ -36,7 +33,6 @@
 "Payment Information","Payment Information"
 "Please configure product bundle options and fix the validation errors","Please configure product bundle options and fix the validation errors"
 "Please configure custom product options and fix the validation errors","Please configure custom product options and fix the validation errors"
-"Please confirm the order you placed when you were offline","Please confirm the order you placed when you were offline"
 "Please fix the validation errors","Please fix the validation errors"
 "Please select the field which You like to sort by","Please select the field which You like to sort by"
 "Please wait ...","Please wait ..."
@@ -117,7 +113,7 @@
 "Apply","Apply"
 "Ok","Ok"
 "invalidCredentials","invalidCredentials"
-"Homepage","Homepage"
+"HomepageПриложи","Homepage"
 "Order Feedback","Order Feedback"
 "Download Invoice","Download Invoice"
 "Retry Payment","Retry Payment"
@@ -416,37 +412,15 @@
 "Suggested Products","Suggested Products"
 "Shipping Fee","Shipping Fee"
 "VAT (Included)","VAT (Included)"
-"Open Menu","Open Menu"
-"Open search panel","Open search panel"
-"Open Wishlist","Open Wishlist"
-"Open micro cart","Open micro cart"
-"Open my account","Open my account"
-"Logout","Logout"
 "Home","Home"
-"Delivery","Delivery"
 "About us","About us"
 "About us (Magento CMS)","About us (Magento CMS)"
-"Customer service (Magento CMS)","Customer service (Magento CMS)"
-"Store locator","Store locator"
-"Go to Facebook","Go to Facebook"
-"Go to Instagram","Go to Instagram"
-"Go to Pinterest","Go to Pinterest"
-"Go to Youtube","Go to Youtube"
-"Legal notice","Legal notice"
-"Privacy policy","Privacy policy"
 "Subscribe to the newsletter and receive a coupon for 10% off","Subscribe to the newsletter and receive a coupon for 10% off"
 "Subscribe","Subscribe"
 "You are offline. Some features might not be available.","You are offline. Some features might not be available."
 "Language","Language"
 "English","English"
-"Search","Search"
-"Log in","Log in"
-"E-mail address *","E-mail address *"
-"Please provide a valid e-mail address.","Please provide a valid e-mail address."
 "Password *","Password *"
-"Remember me","Remember me"
-"Forgot the password?","Forgot the password?"
-"Log in to your account","Log in to your account"
 "or","or"
 "register an account","register an account"
 "Toggle password visibility","Toggle password visibility"
@@ -456,8 +430,5 @@
 "Don"t hesitate and","Don"t hesitate and"
 "browse our catalog","browse our catalog"
 "to find something beautiful for You!","to find something beautiful for You!"
-"My profile","My profile"
 "My shipping details","My shipping details"
-"My orders","My orders"
-"My Recently viewed products","My Recently viewed products"
 "Your Wishlist is empty.","Your Wishlist is empty."
