--- a/src/themes/default-procc/resource/i18n/de-DE.csv
+++ b/src/themes/default-procc/resource/i18n/de-DE.csv
@@ -41,7 +41,7 @@
 "Discount","Rabatt"
 "Don't hesitate and","Zögeren Sie nicht und"
 "E-mail address *","E-Mail-Adresse *"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","Schreiben Sie uns unter <b>demo@vuestorefront.io</b> an, bezüglich Fragen oder Vorschlägen, wie wir das Einkaufserlebnis und die Produkte verbessern können"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","Schreiben Sie uns unter <b>demo@vuestorefront.io</b> an, bezüglich Fragen oder Vorschlägen, wie wir das Einkaufserlebnis und die Produkte verbessern können"
 "Edit newsletter preferences","Newsletter-Einstellungen bearbeiten"
 "Edit payment","Zahlungsart bearbeiten"
 "Edit personal details","Persönliche Daten bearbeiten"
@@ -52,7 +52,7 @@
 "Email address *","E-Mail-Adresse *"
 "Email address","E-Mail-Adresse"
 "English","Englisch"
-"Enter your email to receive instructions on how to reset your password.","Geben Sie Ihre E-Mail-Adresse ein, um Anweisungen zum Zurücksetzen Ihres Passworts zu erhalten."
+"Enter your email to get a manual on how to reset your password.","Geben Sie Ihre E-Mail-Adresse ein, um Anweisungen zum Zurücksetzen Ihres Passworts zu erhalten."
 "Erin recommends","Erin empfiehlt"
 "Erin recommends","Erin empfiehlt"
 "Error while sending reset password e-mail","Fehler beim Senden der E-Mail zum Zurücksetzen des Passworts"
@@ -86,7 +86,7 @@
 "I want to create an account","Ich möchte ein Konto erstellen"
 "I want to create an account'","Ich möchte ein Konto erstellen'"
 "I want an invoice for my company","Ich möchte eine Rechnung für die Firma erstellen"
-"I want to receive a newsletter, and agree to its terms","Ich möchte einen Newsletter erhalten und aktzeptiere die Bedingungen"
+"I want to receive a newsletter and agree to its terms","Ich möchte einen Newsletter erhalten und aktzeptiere die Bedingungen"
 "If you need an assistance you can drop us a line on","Wenn Sie Hilfe benötigen, kontaktieren Sie uns über"
 "If you need an assistance you can drop us a line on","Wenn Sie Hilfe brauchen können Sie uns eine Nachricht schreiben"
 "Internal Server Error 500","500 Interner Server Fehler"
@@ -132,7 +132,7 @@
 "Order ID","ID der Bestellung"
 "Order Summary","Bestellübersicht"
 "Order confirmation","Bestellbestätigung"
-"Order informations","Bestellinformationen"
+"Order information","Bestellinformationen"
 "Orders","Bestellungen"
 "Password *","Passwort *"
 "Password must have at least 8 letters.","Das Passwort muss mindestens 8 Zeichen enthalten."
@@ -144,7 +144,7 @@
 "Phone Number","Telefonnummer"
 "Phone number may be needed by carrier","Telefonnummer könnte für die Zustellung benötigt werden"
 "Place the order","Bestellung abschicken"
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Bitte ändern Sie Ihre Suchkriterien und versuchen Sie es erneut. Wenn Sie weiterhin nichts Relevantes finden können, besuchen Sie unsere Homepage und probieren Sie einige unserer Bestseller!"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","Bitte ändern Sie Ihre Suchkriterien und versuchen Sie es erneut. Wenn Sie weiterhin nichts Relevantes finden können, besuchen Sie unsere Homepage und probieren Sie einige unserer Bestseller!"
 "Please check if all data are correct","Bitte überprüfen Sie, ob alle Daten korrekt sind"
 "Please confirm the order you placed when you were offline","Bitte bestätigen Sie Ihre Bestellung, die Sie im Offline-Modus abgegeben haben"
 "Please provide a valid e-mail address.","Bitte eine gültige E-Mail-Adresse eingeben."
@@ -177,7 +177,7 @@
 "Safety","Sicherheit"
 "Sale","Angebote"
 "Search","Suche"
-"Searched term should consist of at least 3 characters.","Der Suchbegriff sollte mindestens 3 Zeichen haben."
+"The searched term should consist of at least 3 characters.","Der Suchbegriff sollte mindestens 3 Zeichen haben."
 "See details","Details anzeigen"
 "See our bestsellers","Sehen Sie sich unsere Bestseller an"
 "Select No","Wähle Nein"
@@ -207,10 +207,10 @@
 "Tax ID *","Steuer ID *"
 "Tax ID must have at least 3 letters.","Die Steuer ID muss aus mindestend 3 Zeichen bestehen."
 "Tax identification number *","Steuer-Identifikationsnummer *"
-"Tax identification number must have at least 3 letters.","Die Steuer-Identifikationsnummer muss aus mindestens 3 Zeichen bestehen."
+"The tax identification number must have at least 3 letters.","Die Steuer-Identifikationsnummer muss aus mindestens 3 Zeichen bestehen."
 "Tax","Steuer"
 "Terms and conditions","Allgemeine Geschäftsbedingungen"
-"The new account will be created with the purchase. You will receive details on e-mail.","Das neue Konto wird mit dem Abschluss der Bestellung erstellt. Weitere Details werden Ihnen per E-Mail zugesendet."
+"A new account will be created with the purchase. You will receive details by e-mail.","Das neue Konto wird mit dem Abschluss der Bestellung erstellt. Weitere Details werden Ihnen per E-Mail zugesendet."
 "The server order id has been set to ","Die Server-Bestellnummer wurde gesetzt auf "
 "This product is out of stock.","Das Produkt ist nicht mehr auf Lager."
 "Toggle password visibility","Sichtbarkeit des Passwortes umschalten"
