--- a/src/themes/default/resource/i18n/es-ES.csv
+++ b/src/themes/default/resource/i18n/es-ES.csv
@@ -29,7 +29,7 @@
 "Edit","Editar"
 "Email address *","Dirección de correo electrónico *"
 "Email address","Dirección de correo electrónico"
-"Enter your email to receive instructions on how to reset your password.","Ingrese su correo electrónico para recibir instrucciones sobre cómo restablecer su contraseña."
+"Enter your email to get a manual on how to reset your password.","Ingrese su correo electrónico para recibir instrucciones sobre cómo restablecer su contraseña."
 "Erin recommends","Erin recomienda"
 "Error while sending reset password e-mail","Error al enviar el correo electrónico para el restablecimiento de contraseña"
 "Everything new","Todo nuevo"
@@ -137,9 +137,9 @@
 "Subscribe","Suscribir"
 "Tax ID *","Identificación del impuesto *"
 "Tax identification number *","Número de identificación de impuestos *"
-"Tax identification number must have at least 3 letters.","El número de identificación fiscal debe tener al menos 3 letras."
+"The tax identification number must have at least 3 letters.","El número de identificación fiscal debe tener al menos 3 letras."
 "Terms and conditions","Términos y Condiciones"
-"The new account will be created with the purchase. You will receive details on e-mail.","La nueva cuenta se creará con la compra. Recibirá detalles sobre el correo electrónico."
+"A new account will be created with the purchase. You will receive details by e-mail.","La nueva cuenta se creará con la compra. Recibirá detalles sobre el correo electrónico."
 "Track my order","Seguir mi orden"
 "Unfortunately we can't find the page you are looking for.","Desafortunadamente no podemos encontrar la página que está buscando."
 "Update my preferences","Actualizar mis preferencias"
