--- a/src/themes/default/resource/i18n/fr-FR.csv
+++ b/src/themes/default/resource/i18n/fr-FR.csv
@@ -37,7 +37,7 @@
 "Discount","Réduction"
 "Don't hesitate and","N'hésitez pas et "
 "E-mail address *","Adresse e-mail *"
-"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions how we could improve products or shopping experience","Envoyez-nous un mail à <b>demo@vuestorefront.io</b> si vous avez la moindre question ou suggestion sur la façon d'améliorer nos produits ou notre expérience d'achat"
+"E-mail us at <b>demo@vuestorefront.io</b> with any questions, suggestions on how we could improve products or shopping experience","Envoyez-nous un mail à <b>demo@vuestorefront.io</b> si vous avez la moindre question ou suggestion sur la façon d'améliorer nos produits ou notre expérience d'achat"
 "Edit newsletter preferences","Modifier les préférences de la newsletter"
 "Edit payment","Editer le paiement"
 "Edit personal details","Modifier les détails personnels"
@@ -48,7 +48,7 @@
 "Email address *","Adresse e-mail *"
 "Email address","Adresse e-mail"
 "English","Anglais"
-"Enter your email to receive instructions on how to reset your password.","Saisissez votre adresse e-mail afin de recevoir les instructions nécessaires à la réinitialisation de votre mot de passe."
+"Enter your email to get a manual on how to reset your password.","Saisissez votre adresse e-mail afin de recevoir les instructions nécessaires à la réinitialisation de votre mot de passe."
 "Erin recommends","Erin recommende"
 "Error while sending reset password e-mail","Erreur lors de l'envoi de l'Email de réinitialisation du mot de passe"
 "Everything new","Toutes les nouvautés"
@@ -81,7 +81,7 @@
 "I want to create an account","Je veux créer un compte"
 "I want to create an account'","Je veux créer un compte'"
 "I want to generate an invoice for the company","Je veux genérer une facture pour l'entreprise"
-"I want to receive a newsletter, and agree to its terms","Je veux recevoir la newsletter, et j'en accepte les termes"
+"I want to receive a newsletter and agree to its terms","Je veux recevoir la newsletter, et j'en accepte les termes"
 "If you need an assistance you can drop us a line on","Si vous avez besoin d'aide, vous pouvez nous laisser un message"
 "Italian","Italien"
 "Italy","Italie"
@@ -121,7 +121,7 @@
 "Order ID","ID de la commande"
 "Order Summary","Récapitulatif de la commande"
 "Order confirmation","Confirmation de la commande"
-"Order informations","Informations sur la commande"
+"Order information","Informations sur la commande"
 "Orders","Commandes"
 "Password *","Mot de passe *"
 "Password must have at least 8 letters.","Le mot de passe doit avoir au minimum 8 caractères."
@@ -133,7 +133,7 @@
 "Phone Number","Numéro de téléphone"
 "Phone number may be needed by carrier","Le numéro de téléphone peut être requis par le transporteur"
 "Place the order","Passer la commande"
-"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Veuillez changer vos critères de recherche et réessayer. Si vous ne trouvez toujours rien d'intéressant, vous pouvez visiter notre page d'accueil et consulter nos meilleures ventes !"
+"Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our best sellers!","Veuillez changer vos critères de recherche et réessayer. Si vous ne trouvez toujours rien d'intéressant, vous pouvez visiter notre page d'accueil et consulter nos meilleures ventes !"
 "Please check if all data are correct","Veuillez vérifier si toutes les données sont correctes"
 "Please confirm the order you placed when you were offline","Veuillez confirmer la commande que vous avez passé lorsque vous étiez hors-ligne"
 "Please provide valid e-mail address.","Veuillez saisir une adresse e-mail valide."
@@ -190,10 +190,10 @@
 "Tax ID *","Numéro d'immatriculation fiscale *"
 "Tax ID must have at least 3 letters.","Le numéro d'immatriculation fiscale doit comporter au moins 3 lettres."
 "Tax identification number *","Numéro d'identification fiscale *"
-"Tax identification number must have at least 3 letters.","Le numéro d'identification fiscale doit comporter au moins 3 lettres."
+"The tax identification number must have at least 3 letters.","Le numéro d'identification fiscale doit comporter au moins 3 lettres."
 "Tax","Taxes"
 "Terms and conditions","Termes et conditions"
-"The new account will be created with the purchase. You will receive details on e-mail.","Le nouveau compte sera créé à l'achat. Vous recevrez les détails sur votre adresse e-mail."
+"A new account will be created with the purchase. You will receive details by e-mail.","Le nouveau compte sera créé à l'achat. Vous recevrez les détails sur votre adresse e-mail."
 "Toggle password visibility","Afficher le mot de passe"
 "Track my order","Suivre ma commande"
 "Type your opinion","Exprimez votre opinion"
